--- a/wedding-planner-app/package.json
+++ b/wedding-planner-app/package.json
@@ -23,9 +23,14 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "remark": "^15.0.1",
+    "remark-parse": "^11.0.0",
     "slate": "^0.114.0",
+    "slate-hyperscript": "^0.100.0",
     "slate-react": "^0.114.2",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "unified": "^11.0.5",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -42,7 +47,6 @@
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.2",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "typescript-eslint": "^8.30.1"
   }
 }
